syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

message PlayerRoutineInfo {
    uint32 routine_type = 8;
    uint32 finished_num = 15;
}

message PlayerRoutineDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 3526;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated PlayerRoutineInfo routine_info_list = 11;
}

message WorldRoutineInfo {
    uint32 progress = 4;
    bool is_finished = 14;
    uint32 finish_progress = 3;
    uint32 routine_id = 11;
}

message WorldRoutineTypeInfo {
    uint32 routine_type = 13;
    uint32 next_refresh_time = 12;
    repeated WorldRoutineInfo world_routine_info_list = 3;
}

message WorldAllRoutineTypeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 3518;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated WorldRoutineTypeInfo world_routine_type_list = 12;
}

message WorldRoutineTypeRefreshNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 3525;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    WorldRoutineTypeInfo world_routine_type = 7;
}

message WorldRoutineChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 3507;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    WorldRoutineInfo routine_info = 3;
    uint32 routine_type = 11;
}

message WorldRoutineTypeCloseNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 3502;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 routine_type = 7;
}
